fix: make jewelry release build Java 8 compatible